# org-warrior

./: .gitignore  .reviewboardrc  CLAUDE.md  FIX_SUMMARY.md  Makefile  OPENCODE_PROMPT.md  README.md  README.org-warrior.md  TEST_RESULTS.md  email_import.py  pyproject.toml  remind_scheduler.py
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: doom-emacs-setup.md  emacs-setup.el  org-warrior-chat.org  quick-fix.el
feature-requests/: bugs.org  org-id-requirments.org
old_src/: org-warrior
org_warrior/: EmacsHandler.py  HandleCache.py  Org.py  TaskFormatter.py  config.py  elisp_helpers.py  main.py
org_warrior/elisp/: add-child-task.el  add-note.el  add-task.el  clock-in.el  clock-out.el  deadline.el  get-parent.el  get-task-body.el  get-task-by-id.el  list_tasks.el  modify-property.el  modify-tags.el  org-ql-select.el  schedule.el  set-state.el  test.el
scripts/: build.sh
src/: org-warrior  wordlist.txt
tests/: test_add.py  test_add_child.py  test_add_child_integration.py  test_arg_parsing.sh  test_formatter.py  test_get_parent.py  test_handle_cache.py  test_handles.py  test_modify.py  test_note.py  test_note_integration.py  test_org_warrior.sh  test_orgql.py  test_parsing.py  test_pure_functions.py  test_schedule_parsing.py
